# ros2_image_codec

./: .gitignore  Dockerfile  README.md  docker-compose.yml
image_enc_dec/: CMakeLists.txt  package.xml
image_enc_dec/cuvid_round_trip_test/: CMakeLists.txt  cuvid_round_trip_test.cpp
image_enc_dec/include/image_enc_dec/: ffmpeg_encoder.hpp
image_enc_dec/src/: encoder_node.cpp  publish_images.cpp  round_trip_test.cpp
image_enc_dec/src/lib-ffmpeg_enc_dec/: ffmpeg_encoder.cpp
ros2_image_codec/: CMakeLists.txt  package.xml
ros2_image_codec/codec_nodes/: encoder_node.cpp
ros2_image_codec/lib_image_codec/: CMakeLists.txt  exceptions.hpp  ffmpeg_codec.cpp  ffmpeg_codec.hpp  ffmpeg_codec.test.cpp  ffmpeg_encoder.cpp  ffmpeg_encoder.hpp  ffmpeg_encoder.test.cpp  i_codec.hpp  i_encoder.hpp
ros2_image_codec/lib_image_codec/ffmpeg_codec/: CMakeLists.txt  ffmpeg_codec.cpp  ffmpeg_codec.hpp  ffmpeg_codec.test.cpp
ros2_image_codec/lib_image_codec/nv_codec/: CMakeLists.txt  nv_codec.cpp  nv_codec.hpp  nv_codec.test.cpp
ros2_image_codec/lib_image_codec/tests/: CMakeLists.txt  codec_tests.cpp
ros2_image_codec/tests/: round_trip_test.cpp
